# wwidl

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/commands/: check.rs  mod.rs  note.rs  remove.rs
src/config/: tests.rs
tests/: test_config.toml
