[package]
name = "wwidl"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.133", features = ["derive"] }
clap = { version = "3.0.4", features = ["derive"] }
chrono = { version = "0.4.19" }
